# convertible

./: .gitignore  README.md  convertible.desktop.in  main.c  meson.build
src/: accelerometer-orientation.h  convertible.c  convertible.h  convertible_logging.h  dbus_acceleration.c  dbus_acceleration.h  e-gadget-convertible.c  e-gadget-convertible.h  e_mod_config.c  e_mod_config.h  input_rotation.h  main.c  mod.c  my-program
theme/: convertible-icon.edc  convertible-icon.edj  convertible.edc  convertible.edj  meson.build
